# TuneLab

./: .gitignore  AGENTS.md  CLAUDE.md  ChangeLogs.md  LICENSE.txt  README.md  README.zh-CN.md  RepositoryTuneLab checkout effect  TuneLab.nsi  TuneLab.sln  setup-submodule.md
CIUtils/: find-elf.sh  find-executable.sh  find-macho.sh  pack-installer.ps1  serve-mock-update.ps1
ExtensionCompatibilityLayer/: ExtensionCompatibilityLayer.sln
ExtensionInstaller/: ExtensionInstaller.csproj  Program.cs  ZipFileHelper.cs
PluginHost/: CMakeLists.txt  README.md
PluginHost/csharp/PluginHost.Interop/: NativeMethods.cs  PluginHost.Interop.csproj  PluginHostManager.cs  PluginInstance.cs
PluginHost/include/: PluginHostApi.h
PluginHost/scripts/: build-unix.sh  build-windows.bat
PluginHost/src/: AudioProcessor.cpp  MidiProcessor.cpp  PluginInstance.cpp  PluginInstance.h  VstHost.cpp  VstHost.h  VstHostApi.cpp
TuneLab.Base/: TuneLab.Base.csproj
TuneLab.Bridge/: BridgeClient.cs  BridgeMessage.cs  BridgeProtocol.cs  BridgeService.cs  NamedPipeServer.cs  SharedMemoryServer.cs  TuneLab.Bridge.csproj
TuneLab.Core/: TuneLab.Core.csproj
TuneLab.Extensions/: TuneLab.Extensions.csproj
TuneLab.Extensions.Effect/: EffectAutomationDirtyEvent.cs  EffectDirtyEvent.cs  EffectDirtyType.cs  EffectEngineAttribute.cs  EffectPropertyDirtyEvent.cs  IEffectEngine.cs  IEffectSynthesisData.cs  IEffectSynthesisInput.cs  IEffectSynthesisOutput.cs  IEffectSynthesisResult.cs  IEffectSynthesisTask.cs  TuneLab.Extensions.Effect.csproj  TuneLab.SDK.Effect.csproj
TuneLab.Extensions.Format/: ExportableFormatAttribute.cs  ExportableFormatExtensionEntry.cs  FormatExtensionServiceAttribute.cs  IExportableFormat.cs  IFormatExtensionService.cs  IImportableFormat.cs  ImportableFormatAttribute.cs  ImportableFormatExtensionEntry.cs  TuneLab.Extensions.Format.csproj
TuneLab.Extensions.Formats/: ExportFormatAttribute.cs  IExportFormat.cs  IImportFormat.cs  ImportFormatAttribute.cs  TuneLab.Extensions.Formats.csproj
TuneLab.Extensions.Voice/: IVoiceEngine.cs  IVoiceExtensionService.cs  IVoiceSource.cs  IVoiceSynthesisInput.cs  IVoiceSynthesisSegment.cs  TuneLab.Extensions.Voice.csproj  VoiceExtensionEntry.cs  VoiceExtensionServiceAttribute.cs
TuneLab.Extensions.Voices/: AutomationConfig.cs  DirtyType.cs  IAutomationValueGetter.cs  ISynthesisData.cs  ISynthesisNote.cs  ISynthesisTask.cs  IVoiceEngine.cs  IVoiceSource.cs  SetDirtyAttribute.cs  SynthesisResult.cs  SynthesisSegment.cs  SynthesizedPhoneme.cs  TuneLab.Extensions.Voices.csproj  VoiceEngineAttribute.cs  VoiceSourceInfo.cs
TuneLab.Foundation/: AssemblyInfo.cs.cs  PublicAPI.Shipped.txt  TuneLab.Foundation.csproj
TuneLab.GUI/: Extensions.cs  ProgressWindow.axaml  ProgressWindow.axaml.cs  TuneLab.GUI.csproj
TuneLab.I18N/: DummyTranslator.cs  ITranslationContext.cs  TomlTranslator.cs  TranslationContext.cs  TranslationContexts.cs  TranslationManager.cs  TuneLab.I18N.csproj
TuneLab.PluginHost/: NativeMethods.cs  PluginHostManager.cs  PluginInstance.cs  TuneLab.PluginHost.csproj
TuneLab.SDK/: IAutomationEvaluator.cs  PublicAPI.Shipped.txt  PublicAPI.Unshipped.txt  TuneLab.SDK.csproj
TuneLab.SDK.Base/: AutomationConfig.cs  CheckBoxConfig.cs  ComboBoxConfig.cs  Expression_V1.cs  IAutomationEvaluator.cs  IAutomationValueGetter.cs  IControllerConfig.cs  IExpression_V1.cs  ILog.cs  ITuneLabContext.cs  ObjectConfig.cs  SliderConfig.cs  TextBoxConfig.cs  TuneLab.SDK.Base.csproj
TuneLab.SDK.Effect/: EffectDirtyType_V1.cs  EffectEngineAttribute.cs  EffectEngineAttribute_V1.cs  IEffectAutomationDirtyEvent_V1.cs  IEffectDirtyEvent_V1.cs  IEffectEngine.cs  IEffectEngine_V1.cs  IEffectPropertyDirtyEvent_V1.cs  IEffectSynthesisInput.cs  IEffectSynthesisInput_V1.cs  IEffectSynthesisOutput.cs  IEffectSynthesisOutput_V1.cs  IEffectSynthesisTask.cs  IEffectSynthesisTask_V1.cs  SdkEffect.cs
TuneLab.SDK.Format/: ExportFormatAttribute.cs  IExportFormat.cs  IExportableFormat_V1.cs  IImportFormat.cs  IImportableFormat_V1.cs  ImportFormatAttribute.cs  TuneLab.SDK.Format.csproj
TuneLab.SDK.Voice/: AutomationConfig.cs  DirtyType.cs  IAutomationValueGetter.cs  IPropertyContext.cs  ISynthesisContext.cs  ISynthesisData.cs  ISynthesisNote.cs  ISynthesisSegment.cs  ISynthesisSession.cs  ISynthesisSnapshot.cs  ISynthesisTask.cs  IVoiceEngine.cs  IVoiceEngine_V1.cs  IVoiceExtensionService_V1.cs  IVoiceSource.cs  PhonemeInfo.cs  PinnedPhoneme.cs  SetDirtyAttribute.cs  SynthesisNoteSnapshot.cs  SynthesisResult.cs  SynthesisSegment.cs  SynthesisSnapshot.cs  SynthesisStatusSegment.cs  SynthesizedPhoneme.cs  VoiceEngineAttribute.cs  VoiceExtensionService_V1Attribute.cs  VoiceSourceInfo.cs
TuneLab.Setup/: App.axaml  App.axaml.cs  (+7 more)
TuneLab.Setup.Stub/: Program.cs  TuneLab.Setup.Stub.csproj
TuneLabBridge/: .gitignore  CMakeLists.txt  LICENSE  README.md
TuneLabBridge/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
TuneLabBridge/Source/IPC/: IPCClient.cpp  IPCClient.h  NamedPipeClient.cpp  NamedPipeClient.h  RingBuffer.h  SharedMemoryClient.cpp  SharedMemoryClient.h
TuneLabBridge/Source/Model/: BridgeProtocol.h  TrackInfo.h  TransportState.h
TuneLabBridge/Source/UI/: StatusBar.cpp  StatusBar.h  TrackListComponent.cpp  TrackListComponent.h
TuneLabBridge/Source/Utils/: Logger.h
(+1630 files in other folders)
